Sun Jul 28 11:12:07 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_absint_size): Declaration moved from
	  internal.h to calculate required buffer size to pack integers.
	  (rb_absint_numwords): Ditto.
	  (rb_absint_singlebit_p): Ditto.
	  [ruby-core:42813] [Feature #6065]

Sun Jul 28 10:54:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_pipe): fix pipe name formatting.  as "%x" may
	  not contain '0' at all, fill at fixed position instead.

Sun Jul 28 00:35:14 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_size): Return the bignum "bytewise" size.
	  [ruby-core:55578] [Feature #8553]
	  This is accepted by matz on DevelopersMeeting20130727Japan.

Sun Jul 28 00:07:48 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_integer_pack): Declaration moved from
	  internal.h.
	  (rb_integer_unpack): Ditto.
	  [ruby-core:42813] [Feature #6065]

Fri Jul 26 23:18:13 2013  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Add a new feature that REXML::Parsers::StreamParser
	  supports "entity" event.

Fri Jul 26 23:14:31 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/streamparser.rb
	  (REXML::Parsers::StreamParser#parse): Add "entity" event support to
	  listener. [Bug #8689] [ruby-dev:47542]
	  Reported by Ippei Obayashi.
	* test/rexml/test_stream.rb (StreamTester#entity): Add a test for
	  the above case.

Fri Jul 26 23:05:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): separate numeric literal from succeeding
	  token, and treat 'e' as floating point number only if followed by
	  exponent part.

Fri Jul 26 22:14:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_exec.h (CHECK_VM_STACK_OVERFLOW_FOR_INSN): surround with
	  do/while (0), and remove unnecessary casts.

Fri Jul 26 20:12:07 2013  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/lib/syslog/logger.rb (Syslog::Logger): Add facility
	  to Syslog::Logger. [Fixes GH-305] patch by Max Shytikov